demo-site/manifestos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-site
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: login-site
