demo-site/manifestos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: login-site-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: site.34-29-212-222.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: login-site
                port:
                  number: 80
